--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <section id="top">
-      <div class="outer-div">
-        <!-- <img src="images/tiger.png"> -->
-        <div>
-          <img class="tiger-img" src="images/tiger.png" alt="">
-        </div>
-        <div class="text-wrapper">
-          <div class="header">Hi, I'm Joe.</div>
-          <div class="blurb">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut laborum quia modi voluptate omnis fuga enim aperiam delectus iusto quam.</div>
-          <div class="btn-wrapper">
-            <button class="explore">Scroll Down</button>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
+  <title>Portfolio</title>
+</head>
+
+<body>
+  <section id="top">
+    <div class="outer-div">
+      <div>
+        <img class="tiger-img" src="tiger.png" alt="tiger">
+      </div>
+      <div class="text-wrapper">
+        <div class="header">Hi, I'm Joe.</div>
+        <div class="blurb">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut laborum quia modi voluptate omnis fuga enim.</div>
+        <div class="btn-wrapper">
+          <button class="explore">Explore</button>
         </div>
       </div>
-    </section>
-  </body>
-  
-  
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-            
+    </div>
+  </section>
+</body>
+
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </html>
